changed display type to grid

--- a/index.html
+++ b/index.html
@@ -17,35 +17,26 @@
 <body>
     <div class="container d-flex flex-column align-items-center vw-100">
         <h1>Stoplights</h1>
-        <div class="d-flex justify-content-start w-25">
+        <div class="stoplights-grid">
             <div id="stoplightTop" class="stoplight stoplight-reverse">
                 <span class="red-stoplight"></span>
                 <span class="yellow-stoplight"></span>
-                <span class="green-stoplight"></span>
+                <span class="green-stoplight active"></span>
             </div>
-        </div>
-        <div class="stoplight-spacer"></div>
-        <div class="d-flex justify-content-end w-75">
             <div id="stoplightRight" class="stoplight stoplight-row">
-                <span class="red-stoplight"></span>
+                <span class="red-stoplight active"></span>
                 <span class="yellow-stoplight"></span>
                 <span class="green-stoplight"></span>
             </div>
-        </div>
-        <div class="stoplight-spacer"></div>
-        <div class="d-flex justify-content-start w-75">
             <div id="stoplightLeft" class="stoplight stoplight-row-reverse">
-                <span class="red-stoplight"></span>
+                <span class="red-stoplight active"></span>
                 <span class="yellow-stoplight"></span>
                 <span class="green-stoplight"></span>
             </div>
-        </div>
-        <div class="stoplight-spacer"></div>
-        <div class="d-flex justify-content-end w-25">
             <div id="stoplightBottom" class="stoplight">
                 <span class="red-stoplight"></span>
                 <span class="yellow-stoplight"></span>
-                <span class="green-stoplight"></span>
+                <span class="green-stoplight active"></span>
             </div>
         </div>
     </div>
