added pedestrian stoplights
added pedestrian stoplights that can be requested by a button press

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
                 <span class="yellow-stoplight"></span>
                 <span class="green-stoplight active"></span>
             </div>
+            <div style="rotate: 180deg;" id="pedestrianStoplightBottom" class="stoplight pedestrian-stoplight">
+                <span class="red-stoplight active"></span>
+                <span class="green-stoplight"></span>
+                <button id="pedestrianStoplightBottomButton" title="request signal bottom-right" class="pedestrian-button"></button>
+            </div>
+            <div id="pedestrianStoplightTop" class="stoplight pedestrian-stoplight">
+                <span class="red-stoplight active"></span>
+                <span class="green-stoplight"></span>
+                <button id="pedestrianStoplightTopButton" title="request signal top-left" class="pedestrian-button"></button>
+            </div>
+            <div style="rotate: 270deg;" id="pedestrianStoplightLeft" class="stoplight pedestrian-stoplight">
+                <span class="red-stoplight active"></span>
+                <span class="green-stoplight"></span>
+                <button id="pedestrianStoplightLeftButton" title="request signal bottom-right" class="pedestrian-button"></button>
+            </div>
+            <div style="rotate: 90deg;" id="pedestrianStoplightRight" class="stoplight pedestrian-stoplight">
+                <span class="red-stoplight active"></span>
+                <span class="green-stoplight"></span>
+                <button id="pedestrianStoplightRightButton" title="request signal top-right" class="pedestrian-button"></button>
+            </div>
         </div>
     </div>
 </body>
